fix: text cut off on reports email page

--- a/src/css/ionic.app.css
+++ b/src/css/ionic.app.css
@@ -9876,6 +9876,10 @@ a.button, a.btn-main {
   height: 100%;
   width: 100%; }
 
+.cs-label {
+  padding: 7px 10px 7px 0px;
+  font-size: 16px; }
+
 .wide-as-needed {
   overflow: scroll;
   white-space: nowrap; }
