--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,6 +30,11 @@
     //background-color: green;
 }
 
+.cs-label {
+    padding: 7px 10px 7px 0px;
+    font-size: 16px;
+}
+
 .wide-as-needed {
     overflow: scroll;
     white-space: nowrap;
